image-overflow-fix

--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -17,8 +17,8 @@
 }
 
 .movie-card img {
-  max-width: 100%;
-  height: auto;
+  height: 300px;
+  width: 300px;
   margin-bottom: 10px;
   border-radius: 25px;
 }
